landing-page/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  labels:
    app: landing-page
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: landing-page
    selector:
      matchLabels:
        app: landing-page
    spec:
      containers:
        - name: landing-page
          imagePullPolicy: "Always"
          image: "lsstsqre/tiny-static-server"
          volumeMounts:
            - name: landing-page-www
              mountPath: '/www'
          ports:
            - containerPort: 8080
              name: http
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      volumes:
        - name: landing-page-www
          configMap:
            name: landing-page-www
          # kubectl create configmap landing-page-www --from-file=config/
