landing-page/kubernetes/landing-page-service.yml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  labels:
    name: landing-page
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: landing-page
