landing-page/kubernetes/landing-page-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landing-page
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-body-size: "0m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto https;
      proxy_set_header X-Forwarded-Port 443;
      proxy_set_header X-Forwarded-Path /;
spec:
  tls:
  - hosts:
    - lsp-demo.lsst.codes
    secretName: tls
  rules:
  - host: lsp-demo.lsst.codes
    http:
      paths:
      - path: /
        backend:
          serviceName: landing-page
          servicePort: 8080
